--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,25 +1,28 @@
-name: Django Tests
+name: Ejecutar pruebas (CI)
 
 on:
+  push:
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
-  test:
+  tests:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Configurar Python
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.12"
 
-      - name: Install dependencies
+      - name: Instalar dependencias
         run: |
           pip install -r requirements.txt
+          pip install pytest pytest-django  # 👈 Aquí se agrega pytest sin cambiar tu proyecto
 
-      - name: Run tests (do not translate code)
+      - name: Ejecutar pruebas
         run: |
-          python manage.py test
+          python -m pytest
