--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,9 @@ jobs:
 
       - name: Instalar dependencias
         run: |
+          pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest pytest-django  # 👈 Aquí se agrega pytest sin cambiar tu proyecto
+          pip install pytest pytest-django
 
       - name: Ejecutar pruebas
         run: |
