--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,19 +11,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Configurar Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
-      - name: Instalar dependencias
+      - name: Install dependencies
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest pytest-django
 
-      - name: Ejecutar pruebas
-        run: |
-          python -m pytest
+      - name: Run migrations
+        env:
+          DJANGO_SETTINGS_MODULE: cineAventura.settings
+        run: python manage.py migrate --noinput
+
+      - name: Run tests
+        env:
+          DJANGO_SETTINGS_MODULE: cineAventura.settings
+        run: pytest
