--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,13 @@ jobs:
       - name: Run migrations
         env:
           DJANGO_SETTINGS_MODULE: cineAventura.settings
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
           python manage.py migrate --noinput
 
       - name: Run tests
         env:
           DJANGO_SETTINGS_MODULE: cineAventura.settings
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
           pytest
