--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 asgiref==3.10.0
-Django==5.2.7
+Django==4.2.0
 sqlparse==0.5.3
 typing_extensions==4.15.0
 tzdata==2025.2
 python-decouple==3.8
-
 gunicorn==21.2.0
 whitenoise==6.6.0
-
 requests==2.32.3
-pytest-cov==5.0.0
+pytest==8.3.4
+pytest-django==4.9.0
+pytest-cov==6.0.0
+coverage==7.6.9
